--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ nix = "0.7.0"
 libc = "0.2"
 log = "0.3"
 rusoto = {version = "0.17", features = ["s3"]}
-hyper = "0.8.1"
+hyper = "0.9.10"
 docopt = "0.6.85"
 rustc-serialize = "0.3.19"
+tempdir = "0.3"
